[package]
name = "cesium_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "cesium_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "22.0"
glam = "0.27"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
log = "0.4"
cfg-if = "1.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"
winit = { version = "0.30", features = ["rwh_06"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
android-activity = "0.6"
winit = { version = "0.30", features = ["rwh_06", "android-game-activity"] }
