[package]
name = "cesium_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "cesium_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "22.0"
glam = "0.27"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "sync", "macros"] }
reqwest = "0.12"
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
cfg-if = "1.0"
egui = "0.29.0"
egui-wgpu = "0.29.0"
egui-winit = "0.29.0"
lru = "0.12"
rayon = "1.10"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"
winit = { version = "0.30", features = ["rwh_06"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
android-activity = "0.6"
winit = { version = "0.30", features = ["rwh_06", "android-game-activity"] }
