[workspace]
members = [
    "crates/cesium-engine",
    "crates/cesium-flight"
, "temp_cam_test"]
resolver = "2"

[package]
name = "cesium_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "cesium_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cesium_app"
path = "src/main.rs"

[dependencies]
cesium-engine = { path = "crates/cesium-engine" }
cesium-flight = { path = "crates/cesium-flight" }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
cfg-if = "1.0"
glam = "0.27"
winit = { version = "0.30", features = ["rwh_06"] }
wgpu = "22.0"
sha2 = "0.11.0"
pollster = "1.0.1"

[features]
default = ["debug_panel", "testing"]
debug_panel = ["cesium-engine/debug_panel", "cesium-flight/debug_panel"]
testing = ["cesium-engine/testing"]


[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"
winit = { version = "0.30", features = ["rwh_06"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
android-activity = "0.6"
winit = { version = "0.30", features = ["rwh_06", "android-game-activity"] }
jni = "0.21"

[dev-dependencies]
image = "0.25.10"
rayon = "1.12.0"
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread"] }
