[package]
name = "cesium-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.0"
glam = "0.27"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "sync", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json", "charset", "http2"] }
image = "0.25"
log = "0.4"
cfg-if = "1.0"
egui = "0.29.0"
egui-wgpu = "0.29.0"
egui-winit = "0.29.0"
lru = "0.12"
rayon = "1.10"
async-trait = "0.1.89"
byteorder = "1.5.0"
sha2 = "0.11.0"
gltf = "1.4.1"
winit = { version = "0.30", features = ["rwh_06"] }

[features]
testing = []
